@@ -2,11 +2,11 @@
 # make bulk_extractor plugins
 # stand
 
-AM_CPPFLAGS =  -I../src/be13_api 
+AM_CPPFLAGS =  -I../src/be13_api  -I../src/
 
 bin_PROGRAMS = plugin_test scan_demo.so scan_flexdemo.so
 
-plugin_test_SOURCES = plugin_test.cpp $(BE13_API)
+plugin_test_SOURCES = plugin_test.cpp
 
 scan_demo.so: scan_demo.cpp
 scan_flexdemo.so: scan_flexdemo.flex
