@@ -51,7 +51,7 @@ size_t opt_margin = 1024*1024*4;
 u_int opt_notify_rate = 4;		// by default, notify every 4 pages
 int64_t opt_offset_start = 0;
 int64_t opt_offset_end   = 0;
-int   debug=0;
+uint32_t   debug=0;
 int   opt_silent= 0;
 int   max_bad_alloc_errors = 60;
 uint64_t opt_page_start = 0;
